# peer-review-collusion-detection

./: Makefile  _graph_aamas_sub3_1770873695415505000.txt  _graph_aamas_sub3_bipartite_1770842987384095000.txt  _graph_wu_1770842160084704000.txt  pyproject.toml  pyrightconfig.json  readme.md  run_all_experiments.sh
cpp/: compile_count_cliques_c.sh  count_cliques_bipartite.out  count_cliques_c.out
libs/fraudar/: greedy.py
libs/peer_review_collusion_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/utils/: __init__.py  ds.py
results/: clique_results_aamas_sub3_2026-02-11T14:11:49.994787.csv  clique_results_aamas_sub3_bipartite_2026-02-11T15:48:04.511686.csv  clique_results_wu_2026-02-11T15:11:00.337987.csv  clique_results_wu_bipartite_2026-02-11T15:50:46.490932.csv  detection_results_aamas_sub3_densest_subgraph_2026-02-11T16:04:38.776180.csv  detection_results_aamas_sub3_fraudar_B_bipartite_2026-02-11T23:45:36.083645.csv  detection_results_wu_densest_subgraph_2026-02-11T18:31:42.894239.csv  success_results_aamas_sub3_2026-02-12T16:41:39.104769.csv  success_results_aamas_sub3_bipartite_2026-02-12T19:27:37.467939.csv  success_results_wu_2026-02-12T18:25:04.689428.csv
scripts/: clique_eval.py  construct_authorships.py  detection_eval.py  oqc.py  plot_detection_figure.py  plot_figure1.py  plot_success_figure.py  success_eval.py  synthesize_aamas_text.py
tests/: test_fraudar.py
